--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,9 @@
 [report]
+exclude_lines =
+    pragma: no cover
 omit =
     */python?.?/*
     */site-packages/nose/*
-    */rules/contrib/*
     */rules/templatetags/*
+    */rules/compat/*
     */rules/apps.py
