Updated tox.ini to include testing for Django

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,15 @@
 [tox]
-envlist = py26,py27,py32,py33,py34,pypy,pypy3
+envlist =
+    {py26,py27,py32,py33,py34,pypy,pypy3}-django{15,16},
+    {py27,py32,py33,py34,pypy,pypy3}-django{17,18}
 
 [testenv]
 deps =
     nose
+    django15: Django>=1.5,<1.6
+    django16: Django>=1.6,<1.7
+    django17: Django>=1.7,<1.8
+    django18: Django>=1.8,<1.9
 
-commands = nosetests {posargs}
+commands =
+    {envbindir}/python runtests.py --nologcapture --nocapture {posargs}
