--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.2"
   - "3.3"
   - "3.4"
   - "pypy"
@@ -12,10 +11,13 @@ env:
   - DJANGO='Django<1.6'
   - DJANGO='Django<1.7'
   - DJANGO='Django<1.8'
+  - DJANGO='Django<1.9'
 matrix:
   exclude:
     - python: "2.6"
       env: DJANGO='Django<1.8'
+    - python: "2.6"
+      env: DJANGO='Django<1.9'
 install:
   - 'pip install "${DJANGO}"'
   - pip install coveralls
