--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    {py26,py27,py32,py33,py34,pypy,pypy3}-django{15,16},
-    {py27,py32,py33,py34,pypy,pypy3}-django{17,18}
+    {py26,py27,py33,py34,pypy,pypy3}-django{15,16},
+    {py27,py33,py34,pypy,pypy3}-django{17,18}
 
 [testenv]
 deps =
