Added support for Django 1.9 and Python 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 [tox]
 envlist =
-    {py26,py27,py33,py34,pypy,pypy3}-django{15,16},
-    {py27,py33,py34,pypy,pypy3}-django{17,18}
+    {py26}-django{15,16},
+    {py27}-django{15,16,17,18,19},
+    {py33}-django{15,16,17,18},
+    {py34}-django{17,18,19},
+    {py35}-django{18,19},
+    {pypy}-django{15,16,17,18,19},
+    {pypy3}-django{15,16,17,18}
 
 [testenv]
 deps =
@@ -10,6 +15,7 @@ deps =
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<1.10
 
 commands =
     {envbindir}/python runtests.py --nologcapture --nocapture {posargs}
