--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 # Python support matrix per Django version
 #
 #   2.6   1.5  1.6
-#   2.7   1.5  1.6  1.7  1.8  1.9
+#   2.7   1.5  1.6  1.7  1.8  1.9  1.10
 #   3.3   1.5  1.6  1.7  1.8
-#   3.4             1.7  1.8  1.9
-#   3.5                  1.8  1.9
+#   3.4             1.7  1.8  1.9  1.10
+#   3.5                  1.8  1.9  1.10
 # ----------------------------------------
 sudo: false
 language: python
@@ -23,6 +23,7 @@ env:
   - DJANGO='Django<1.8'  # Django 1.7
   - DJANGO='Django<1.9'  # Django 1.8
   - DJANGO='Django<1.10' # Django 1.9
+  - DJANGO='Django<1.11' # Django 1.10
 matrix:
   exclude:
     - python: "2.6"
@@ -31,8 +32,12 @@ matrix:
       env: DJANGO='Django<1.9'
     - python: "2.6"
       env: DJANGO='Django<1.10'
+    - python: "2.6"
+      env: DJANGO='Django<1.11'
     - python: "3.3"
       env: DJANGO='Django<1.10'
+    - python: "3.3"
+      env: DJANGO='Django<1.11'
     - python: "3.4"
       env: DJANGO='Django<1.6'
     - python: "3.4"
@@ -45,6 +50,8 @@ matrix:
       env: DJANGO='Django<1.8'
     - python: "pypy3"
       env: DJANGO='Django<1.10'
+    - python: "pypy3"
+      env: DJANGO='Django<1.11'
 install:
   - 'pip install "${DJANGO}"'
   - pip install coveralls
