--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 envlist =
     {py26}-django{15,16},
-    {py27}-django{15,16,17,18,19},
+    {py27}-django{15,16,17,18,19,110},
     {py33}-django{15,16,17,18},
-    {py34}-django{17,18,19},
-    {py35}-django{18,19},
-    {pypy}-django{15,16,17,18,19},
+    {py34}-django{17,18,19,110},
+    {py35}-django{18,19,110},
+    {pypy}-django{15,16,17,18,19,110},
     {pypy3}-django{15,16,17,18}
 
 [testenv]
@@ -16,6 +16,7 @@ deps =
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
+    django110: Django>=1.10,<1.11
 
 commands =
     {envbindir}/python runtests.py --nologcapture --nocapture {posargs}
