--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 envlist =
     {py26}-django{15,16},
-    {py27}-django{15,16,17,18,19,110},
+    {py27}-django{15,16,17,18,19,110,111},
     {py33}-django{15,16,17,18},
-    {py34}-django{17,18,19,110},
-    {py35}-django{18,19,110}
+    {py34}-django{17,18,19,110,111},
+    {py35}-django{18,19,110,111},
+    {py36}-django{110,111}
 
 [testenv]
 deps =
@@ -15,6 +16,7 @@ deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<1.12
 
 commands =
     {envbindir}/python runtests.py --nologcapture --nocapture {posargs}
