--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@
 # Python support matrix per Django version
 #
 #   2.6   1.5  1.6
-#   2.7   1.5  1.6  1.7  1.8  1.9  1.10
+#   2.7   1.5  1.6  1.7  1.8  1.9  1.10  1.11
 #   3.3   1.5  1.6  1.7  1.8
-#   3.4             1.7  1.8  1.9  1.10
-#   3.5                  1.8  1.9  1.10
+#   3.4             1.7  1.8  1.9  1.10  1.11
+#   3.5                  1.8  1.9  1.10  1.11
+#   3.6                            1.10  1.11
 # ----------------------------------------
 sudo: false
 language: python
@@ -24,6 +25,7 @@ env:
   - DJANGO='Django<1.9'  # Django 1.8
   - DJANGO='Django<1.10' # Django 1.9
   - DJANGO='Django<1.11' # Django 1.10
+  - DJANGO='Django<1.12' # Django 1.11
 matrix:
   exclude:
     - python: "2.6"
@@ -34,10 +36,14 @@ matrix:
       env: DJANGO='Django<1.10'
     - python: "2.6"
       env: DJANGO='Django<1.11'
+    - python: "2.6"
+      env: DJANGO='Django<1.12'
     - python: "3.3"
       env: DJANGO='Django<1.10'
     - python: "3.3"
       env: DJANGO='Django<1.11'
+    - python: "3.3"
+      env: DJANGO='Django<1.12'
     - python: "3.4"
       env: DJANGO='Django<1.6'
     - python: "3.4"
@@ -48,10 +54,22 @@ matrix:
       env: DJANGO='Django<1.7'
     - python: "3.5"
       env: DJANGO='Django<1.8'
+    - python: "3.6"
+      env: DJANGO='Django<1.6'
+    - python: "3.6"
+      env: DJANGO='Django<1.7'
+    - python: "3.6"
+      env: DJANGO='Django<1.8'
+    - python: "3.6"
+      env: DJANGO='Django<1.9'
+    - python: "3.6"
+      env: DJANGO='Django<1.10'
     - python: "pypy3"
       env: DJANGO='Django<1.10'
     - python: "pypy3"
       env: DJANGO='Django<1.11'
+    - python: "pypy3"
+      env: DJANGO='Django<1.12'
 install:
   - 'pip install "${DJANGO}"'
   - pip install coveralls
