--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,26 @@
 [tox]
 envlist =
-    {py26}-django{15,16},
-    {py27}-django{15,16,17,18,19,110},
-    {py33}-django{15,16,17,18},
-    {py34}-django{17,18,19,110},
-    {py35}-django{18,19,110},
-    {pypy}-django{15,16,17,18,19,110},
-    {pypy3}-django{15,16,17,18}
+    py26-django{15,16}
+    py27-django{15,16,17,18,19,110}
+    py33-django{15,16,17,18}
+    py34-django{17,18,19,110}
+    py35-django{18,19,110}
+    pypy-django{15,16,17,18,19,110}
+    pypy3-django{15,16,17,18}
+    py{34,35,36,py3}-django20
 
 [testenv]
 deps =
     nose
+    coverage
     django15: Django>=1.5,<1.6
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
+    django20: Django>=2.0b1,<2.1
 
 commands =
-    {envbindir}/python runtests.py --nologcapture --nocapture {posargs}
+    coverage run --source=rules runtests.py --nologcapture --nocapture {posargs}
+    coverage report -m
