Add support for Django 2.0

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ envlist =
     {py26}-django{15,16},
     {py27}-django{15,16,17,18,19,110,111},
     {py33}-django{15,16,17,18},
-    {py34}-django{17,18,19,110,111},
-    {py35}-django{18,19,110,111},
-    {py36}-django{110,111}
+    {py34}-django{17,18,19,110,111,20},
+    {py35}-django{18,19,110,111,20},
+    {py36}-django{110,111,20}
 
 [testenv]
 deps =
@@ -18,6 +18,7 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
+    django20: Django>=2.0,<2.1
 
 commands =
     coverage run --source=rules runtests.py --nologcapture --nocapture {posargs}
