--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,11 @@ matrix:
     # - { env: TOXENV=pypy-django18, python: pypy }
     # - { env: TOXENV=pypy-django19, python: pypy }
     # - { env: TOXENV=pypy-django110, python: pypy }
-    - { env: TOXENV=pypy3-django15, python: pypy3.3-5.5-alpha }
-    - { env: TOXENV=pypy3-django16, python: pypy3.3-5.5-alpha }
-    - { env: TOXENV=pypy3-django17, python: pypy3.3-5.5-alpha }
-    - { env: TOXENV=pypy3-django18, python: pypy3.3-5.5-alpha }
-    - { env: TOXENV=pypy3-django20, python: pypy3.3-5.5-alpha }
+    # - { env: TOXENV=pypy3-django15, python: pypy3.5-5.8 }
+    # - { env: TOXENV=pypy3-django16, python: pypy3.5-5.8 }
+    # - { env: TOXENV=pypy3-django17, python: pypy3.5-5.8 }
+    # - { env: TOXENV=pypy3-django18, python: pypy3.5-5.8 }
+    - { env: TOXENV=pypy3-django20, python: pypy3.5-5.8 }
 install:
   - pip install tox
 script: tox
