--- a/.travis.yml
+++ b/.travis.yml
@@ -2,38 +2,38 @@ sudo: false
 language: python
 matrix:
   include:
-    # - { env: TOXENV=py26-django15, python: 2.6 }
-    # - { env: TOXENV=py26-django16, python: 2.6 }
-    # - { env: TOXENV=py27-django15, python: 2.7 }
-    # - { env: TOXENV=py27-django16, python: 2.7 }
-    # - { env: TOXENV=py27-django17, python: 2.7 }
-    # - { env: TOXENV=py27-django18, python: 2.7 }
-    # - { env: TOXENV=py27-django19, python: 2.7 }
-    # - { env: TOXENV=py27-django110, python: 2.7 }
-    # - { env: TOXENV=py33-django15, python: 3.3 }
-    # - { env: TOXENV=py33-django16, python: 3.3 }
-    # - { env: TOXENV=py33-django17, python: 3.3 }
-    # - { env: TOXENV=py33-django18, python: 3.3 }
-    # - { env: TOXENV=py34-django17, python: 3.4 }
-    # - { env: TOXENV=py34-django18, python: 3.4 }
-    # - { env: TOXENV=py34-django19, python: 3.4 }
-    # - { env: TOXENV=py34-django110, python: 3.4 }
-    # - { env: TOXENV=py35-django18, python: 3.5 }
-    # - { env: TOXENV=py35-django19, python: 3.5 }
-    # - { env: TOXENV=py35-django110, python: 3.5 }
-    # - { env: TOXENV=py34-django20, python: 3.4 }
-    # - { env: TOXENV=py35-django20, python: 3.5 }
-    # - { env: TOXENV=py36-django20, python: 3.6 }
-    # - { env: TOXENV=pypy-django15, python: pypy }
-    # - { env: TOXENV=pypy-django16, python: pypy }
-    # - { env: TOXENV=pypy-django17, python: pypy }
-    # - { env: TOXENV=pypy-django18, python: pypy }
-    # - { env: TOXENV=pypy-django19, python: pypy }
-    # - { env: TOXENV=pypy-django110, python: pypy }
-    # - { env: TOXENV=pypy3-django15, python: pypy3.5-5.8 }
-    # - { env: TOXENV=pypy3-django16, python: pypy3.5-5.8 }
-    # - { env: TOXENV=pypy3-django17, python: pypy3.5-5.8 }
-    # - { env: TOXENV=pypy3-django18, python: pypy3.5-5.8 }
+    - { env: TOXENV=py26-django15, python: 2.6 }
+    - { env: TOXENV=py26-django16, python: 2.6 }
+    - { env: TOXENV=py27-django15, python: 2.7 }
+    - { env: TOXENV=py27-django16, python: 2.7 }
+    - { env: TOXENV=py27-django17, python: 2.7 }
+    - { env: TOXENV=py27-django18, python: 2.7 }
+    - { env: TOXENV=py27-django19, python: 2.7 }
+    - { env: TOXENV=py27-django110, python: 2.7 }
+    - { env: TOXENV=py33-django15, python: 3.3 }
+    - { env: TOXENV=py33-django16, python: 3.3 }
+    - { env: TOXENV=py33-django17, python: 3.3 }
+    - { env: TOXENV=py33-django18, python: 3.3 }
+    - { env: TOXENV=py34-django17, python: 3.4 }
+    - { env: TOXENV=py34-django18, python: 3.4 }
+    - { env: TOXENV=py34-django19, python: 3.4 }
+    - { env: TOXENV=py34-django110, python: 3.4 }
+    - { env: TOXENV=py35-django18, python: 3.5 }
+    - { env: TOXENV=py35-django19, python: 3.5 }
+    - { env: TOXENV=py35-django110, python: 3.5 }
+    - { env: TOXENV=py34-django20, python: 3.4 }
+    - { env: TOXENV=py35-django20, python: 3.5 }
+    - { env: TOXENV=py36-django20, python: 3.6 }
+    - { env: TOXENV=pypy-django15, python: pypy }
+    - { env: TOXENV=pypy-django16, python: pypy }
+    - { env: TOXENV=pypy-django17, python: pypy }
+    - { env: TOXENV=pypy-django18, python: pypy }
+    - { env: TOXENV=pypy-django19, python: pypy }
+    - { env: TOXENV=pypy-django110, python: pypy }
+    - { env: TOXENV=pypy3-django15, python: pypy3.5-5.8.0 }
+    - { env: TOXENV=pypy3-django16, python: pypy3.5-5.8.0 }
+    - { env: TOXENV=pypy3-django17, python: pypy3.5-5.8.0 }
+    - { env: TOXENV=pypy3-django18, python: pypy3.5-5.8.0 }
     - { env: TOXENV=pypy3-django20, python: pypy3.5-5.8.0 }
 install:
   - pip install tox
