--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+  - "3.6"
   - "pypy"
   - "pypy3"
 env:
@@ -62,6 +63,18 @@ matrix:
       env: DJANGO='Django<1.7'
     - python: "3.5"
       env: DJANGO='Django<1.8'
+    - python: "3.6"
+      env: DJANGO='Django<1.6'
+    - python: "3.6"
+      env: DJANGO='Django<1.7'
+    - python: "3.6"
+      env: DJANGO='Django<1.8'
+    - python: "3.6"
+      env: DJANGO='Django<1.9'
+    - python: "3.6"
+      env: DJANGO='Django<1.10'
+    - python: "3.6"
+      env: DJANGO='Django<1.11'
     - python: "pypy3"
       env: DJANGO='Django<1.6'
     - python: "pypy3"
