Drop support for pypy and pypy3
Either PyPy is flaky, or Travis support for it is lacking. Either way, it’s too much pain to maintain and it’s not worth it.

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,7 @@ envlist =
     {py27}-django{15,16,17,18,19,110},
     {py33}-django{15,16,17,18},
     {py34}-django{17,18,19,110},
-    {py35}-django{18,19,110},
-    {pypy}-django{15,16,17,18,19,110},
-    {pypy3}-django{15,16,17,18}
+    {py35}-django{18,19,110}
 
 [testenv]
 deps =
