--- a/.travis.yml
+++ b/.travis.yml
@@ -27,42 +27,24 @@ env:
   - DJANGO='Django<1.12' # Django 1.11
 matrix:
   exclude:
-    - python: "2.6"
-      env: DJANGO='Django<1.8'
-    - python: "2.6"
-      env: DJANGO='Django<1.9'
-    - python: "2.6"
-      env: DJANGO='Django<1.10'
-    - python: "2.6"
-      env: DJANGO='Django<1.11'
-    - python: "2.6"
-      env: DJANGO='Django<1.12'
-    - python: "3.3"
-      env: DJANGO='Django<1.10'
-    - python: "3.3"
-      env: DJANGO='Django<1.11'
-    - python: "3.3"
-      env: DJANGO='Django<1.12'
-    - python: "3.4"
-      env: DJANGO='Django<1.6'
-    - python: "3.4"
-      env: DJANGO='Django<1.7'
-    - python: "3.5"
-      env: DJANGO='Django<1.6'
-    - python: "3.5"
-      env: DJANGO='Django<1.7'
-    - python: "3.5"
-      env: DJANGO='Django<1.8'
-    - python: "3.6"
-      env: DJANGO='Django<1.6'
-    - python: "3.6"
-      env: DJANGO='Django<1.7'
-    - python: "3.6"
-      env: DJANGO='Django<1.8'
-    - python: "3.6"
-      env: DJANGO='Django<1.9'
-    - python: "3.6"
-      env: DJANGO='Django<1.10'
+    - { python: "2.6" env: DJANGO='Django<1.8' }
+    - { python: "2.6" env: DJANGO='Django<1.9' }
+    - { python: "2.6" env: DJANGO='Django<1.10' }
+    - { python: "2.6" env: DJANGO='Django<1.11' }
+    - { python: "2.6" env: DJANGO='Django<1.12' }
+    - { python: "3.3" env: DJANGO='Django<1.10' }
+    - { python: "3.3" env: DJANGO='Django<1.11' }
+    - { python: "3.3" env: DJANGO='Django<1.12' }
+    - { python: "3.4" env: DJANGO='Django<1.6' }
+    - { python: "3.4" env: DJANGO='Django<1.7' }
+    - { python: "3.5" env: DJANGO='Django<1.6' }
+    - { python: "3.5" env: DJANGO='Django<1.7' }
+    - { python: "3.5" env: DJANGO='Django<1.8' }
+    - { python: "3.6" env: DJANGO='Django<1.6' }
+    - { python: "3.6" env: DJANGO='Django<1.7' }
+    - { python: "3.6" env: DJANGO='Django<1.8' }
+    - { python: "3.6" env: DJANGO='Django<1.9' }
+    - { python: "3.6" env: DJANGO='Django<1.10' }
 install:
   - 'pip install "${DJANGO}"'
   - pip install coveralls
