Run Tox directly on Travis

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ envlist =
 [testenv]
 deps =
     nose
+    coverage
     django15: Django>=1.5,<1.6
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
@@ -19,4 +20,5 @@ deps =
     django111: Django>=1.11,<1.12
 
 commands =
-    {envbindir}/python runtests.py --nologcapture --nocapture {posargs}
+    coverage run --source=rules runtests.py --nologcapture --nocapture {posargs}
+    coverage report -m
