--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     {py36}-django{110,111,20}
 
 [testenv]
+usedevelop = true
 deps =
     nose
     coverage
@@ -21,5 +22,5 @@ deps =
     django20: Django>=2.0,<2.1
 
 commands =
-    coverage run --source=rules runtests.py --nologcapture --nocapture {posargs}
+    coverage run tests/manage.py test testsuite {posargs: -v 2}
     coverage report -m
