--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,12 @@
-[nosetests]
-verbosity=2
-cover-package=rules
-cover-erase=1
-#cover-branches=1
+[bdist_wheel]
+universal = 1
+
+[coverage:run]
+source = rules
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+omit =
+    */rules/apps.py
+    */rules/compat/*
