Update tox/travis matrix

--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,18 @@
 [tox]
 envlist =
-    {py26}-django{15,16},
-    {py27}-django{15,16,17,18,19,110,111},
-    {py33}-django{15,16,17,18},
-    {py34}-django{17,18,19,110,111,20},
-    {py35}-django{18,19,110,111,20},
-    {py36}-django{110,111,20}
+    py27-django{111},
+    py34-django{111,20},
+    py35-django{111,20},
+    py36-django{111,20},
+    pypy-django{111},
+    pypy3-django{111,20},
 
 [testenv]
 usedevelop = true
 deps =
-    nose
     coverage
-    django15: Django>=1.5,<1.6
-    django16: Django>=1.6,<1.7
-    django17: Django>=1.7,<1.8
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
-    django111: Django>=1.11,<1.12
-    django20: Django>=2.0,<2.1
+    django111: Django~=1.11
+    django20: Django~=2.0
 
 commands =
     coverage run tests/manage.py test testsuite {posargs: -v 2}
