--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,16 @@
-# ---------------------------------------------------------------------------
-# Python support matrix per Django version
-#
-#   2.6   1.5  1.6
-#   2.7   1.5  1.6  1.7  1.8  1.9  1.10  1.11
-#   3.3   1.5  1.6  1.7  1.8
-#   3.4             1.7  1.8  1.9  1.10  1.11  2.0
-#   3.5                  1.8  1.9  1.10  1.11  2.0
-#   3.6                            1.10  1.11  2.0
-# ---------------------------------------------------------------------------
 sudo: false
 language: python
-matrix:
-  include:
-    - { python: 2.6, env: TOXENV=py26-django15 }
-    - { python: 2.6, env: TOXENV=py26-django16 }
-    - { python: 2.7, env: TOXENV=py27-django15 }
-    - { python: 2.7, env: TOXENV=py27-django16 }
-    - { python: 2.7, env: TOXENV=py27-django17 }
-    - { python: 2.7, env: TOXENV=py27-django18 }
-    - { python: 2.7, env: TOXENV=py27-django19 }
-    - { python: 2.7, env: TOXENV=py27-django110 }
-    - { python: 2.7, env: TOXENV=py27-django111 }
-    - { python: 3.3, env: TOXENV=py33-django15 }
-    - { python: 3.3, env: TOXENV=py33-django16 }
-    - { python: 3.3, env: TOXENV=py33-django17 }
-    - { python: 3.3, env: TOXENV=py33-django18 }
-    - { python: 3.4, env: TOXENV=py34-django17 }
-    - { python: 3.4, env: TOXENV=py34-django18 }
-    - { python: 3.4, env: TOXENV=py34-django19 }
-    - { python: 3.4, env: TOXENV=py34-django110 }
-    - { python: 3.4, env: TOXENV=py34-django20 }
-    - { python: 3.4, env: TOXENV=py34-django111 }
-    - { python: 3.5, env: TOXENV=py35-django18 }
-    - { python: 3.5, env: TOXENV=py35-django19 }
-    - { python: 3.5, env: TOXENV=py35-django110 }
-    - { python: 3.5, env: TOXENV=py35-django111 }
-    - { python: 3.5, env: TOXENV=py35-django20 }
-    - { python: 3.6, env: TOXENV=py36-django110 }
-    - { python: 3.6, env: TOXENV=py36-django111 }
-    - { python: 3.6, env: TOXENV=py36-django20 }
+python:
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "pypy"
+  - "pypy3"
+
 install:
-  - pip install tox
+  - pip install tox tox-travis tox-venv
+  - pip install coveralls
 script: tox
 after_success:
   - coveralls
