--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
     py36-django{111,20},
     pypy-django{111},
     pypy3-django{111,20},
+    packaging,
 
 [testenv]
 usedevelop = true
@@ -17,3 +18,11 @@ deps =
 commands =
     coverage run tests/manage.py test testsuite {posargs: -v 2}
     coverage report -m
+
+[testenv:packaging]
+usedevelop = false
+deps =
+    django
+
+commands =
+    python tests/manage.py test testsuite {posargs: -v 2}
