Add mixins for CBV and DRF that check permissions automatically

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ envlist =
 usedevelop = true
 deps =
     coverage
+    djangorestframework
     django111: Django~=1.11
     django20: Django~=2.0
 
@@ -23,6 +24,7 @@ commands =
 usedevelop = false
 deps =
     django
+    djangorestframework
 
 commands =
     python tests/manage.py test testsuite {posargs: -v 2}
