Fix packaging build

--- a/tox.ini
+++ b/tox.ini
@@ -25,4 +25,4 @@ deps =
     django
 
 commands =
-    python tests/manage.py test testsuite {posargs: -v 2}
+    {envpython} tests/manage.py test testsuite {posargs: -v 2}
