Added support for Python 3.7 and 3.8

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist =
     py34-django{111,20},
     py35-django{111,20},
     py36-django{111,20},
+    py37-django{111,20},
+    py38-django{111,20},
     pypy-django{111},
     pypy3-django{111,20},
     packaging,
