--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,11 @@ envlist =
     py27-django{111},
     py34-django{111,20},
     py35-django{111,20},
-    py36-django{111,20},
-    py37-django{111,20},
-    py38-django{111,20},
+    py36-django{111,20,30},
+    py37-django{111,20,30},
+    py38-django{111,20,30},
     pypy-django{111},
-    pypy3-django{111,20},
+    pypy3-django{111,20,30},
     packaging,
 
 [testenv]
@@ -17,16 +17,16 @@ deps =
     djangorestframework
     django111: Django~=1.11
     django20: Django~=2.0
-
+    django30: Django~=3.0
 commands =
-    coverage run tests/manage.py test testsuite {posargs: -v 2}
-    coverage report -m
+    py27,pypy: {envpython} tests/manage.py test testsuite {posargs: -v 2}
+    py{34,35,36,37,38},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
+    py{34,35,36,37,38},pypy3: coverage report -m
 
 [testenv:packaging]
 usedevelop = false
 deps =
     django
     djangorestframework
-
 commands =
     {envpython} tests/manage.py test testsuite {posargs: -v 2}
