--- a/tox.ini
+++ b/tox.ini
@@ -26,3 +26,10 @@ deps =
     djangorestframework
 commands =
     {envpython} tests/manage.py test testsuite {posargs: -v 2}
+
+[testenv:djangomain]
+deps =
+    https://github.com/django/django/archive/main.tar.gz#egg=django
+    djangorestframework
+commands =
+    {envpython} tests/manage.py test testsuite {posargs: -v 2}
