--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,10 @@
 [tox]
 envlist =
-    py27-django{111},
-    py34-django{111,20},
-    py35-django{111,20},
-    py36-django{111,20,30},
-    py37-django{111,20,30},
-    py38-django{111,20,30},
-    pypy-django{111},
-    pypy3-django{111,20,30},
+    py36-django{22,30,31,32},
+    py37-django{22,30,31,32},
+    py38-django{22,30,31,32},
+    py39-django{22,30,31,32},
+    pypy3-django{22,30,31,32},
     packaging,
 
 [testenv]
@@ -15,18 +12,24 @@ usedevelop = true
 deps =
     coverage
     djangorestframework
-    django111: Django~=1.11
-    django20: Django~=2.0
-    django30: Django~=3.0
+    django22: Django~=2.2
+    django31: Django~=3.1
+    django32: Django~=3.2
 commands =
-    py27,pypy: {envpython} tests/manage.py test testsuite {posargs: -v 2}
-    py{34,35,36,37,38},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
-    py{34,35,36,37,38},pypy3: coverage report -m
+    py{36,37,38,39},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
+    py{36,37,38,39},pypy3: coverage report -m
 
 [testenv:packaging]
 usedevelop = false
 deps =
     django
+    djangorestframework
+commands =
+    {envpython} tests/manage.py test testsuite {posargs: -v 2}
+
+[testenv:djangomain]
+deps =
+    https://github.com/django/django/archive/main.tar.gz#egg=django
     djangorestframework
 commands =
     {envpython} tests/manage.py test testsuite {posargs: -v 2}
