Add pre-commit + black/isort/flake8 configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,11 @@
 [bdist_wheel]
 universal = 1
 
+[flake8]
+max-line-length=88
+select = C,E,F,W,B,B950,I
+ignore = E203,E501,W503
+
 [coverage:run]
 source = rules
 
