--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,24 @@ on:
   pull_request:
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Set up Python 3.6
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.6"
+      - uses: pre-commit/action@v2.0.2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
   tests:
     name: Python ${{ matrix.python-version }} (${{ matrix.toxenv }})
     runs-on: ubuntu-latest
+    needs: lint
 
     strategy:
       matrix:
