Update maintained versions of python and django
- python 3.6 reached end of life
- django 3.1 and 3.2 reached end of life
- django 4.0 is now, current supported version
- python 3.10 is now, current supported version

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,7 @@
 [tox]
 envlist =
-    py36-django{22,30,31,32},
-    py37-django{22,30,31,32},
-    py38-django{22,30,31,32},
-    py39-django{22,30,31,32},
-    pypy3-django{22,30,31,32},
+    py{37,38,39,310}-django{22,32},
+    py{38,39,310}-django40,
     packaging,
 
 [testenv]
@@ -13,11 +10,11 @@ deps =
     coverage
     djangorestframework
     django22: Django~=2.2
-    django31: Django~=3.1
     django32: Django~=3.2
+    django40: Django~=4.0
 commands =
-    py{36,37,38,39},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
-    py{36,37,38,39},pypy3: coverage report -m
+    py{37,38,39,310},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
+    py{37,38,39,310},pypy3: coverage report -m
 
 [testenv:packaging]
 usedevelop = false
