--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Set up Python 3.6
+      - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: "3.6"
+          python-version: "3.10"
       - uses: pre-commit/action@v2.0.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -28,7 +28,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
         experimental: [false]
         toxenv: ["py"]
         include:
@@ -67,7 +67,7 @@ jobs:
     - name: Run tox targets for Python ${{ matrix.python-version }}
       if: ${{ matrix.toxenv == 'PyPy' }}
       continue-on-error: ${{ matrix.experimental }}
-      run: tox -e pypy3-django22,pypy3-django30,pypy3-django31,pypy3-django32
+      run: tox -e pypy3-django22,pypy3-django32
 
     - name: Upload coverage data to coveralls.io
       env:
