Introduce typing annotations
The goal is to initiate the effort of providing full annotations for the library.
Which is not yet the case, but we need to start small and progress
incrementally.
Hopefully this will create incentive from other contributors to add up
to this effort, even in tiny steps, until we can take advantage of
the multiple type checkers out there.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,3 +8,4 @@ global-exclude *.py[cod] __pycache__
 global-exclude .coverage
 global-exclude .DS_Store
 exclude .pre-commit-config.yaml tox.ini
+recursive-include rules *.typed
