--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install --upgrade coveralls pysqlite tox tox-py tox-venv
+        python -m pip install --upgrade coveralls tox tox-py tox-venv
 
     - name: Run tox targets for Python ${{ matrix.python-version }}
       if: ${{ matrix.toxenv == 'py' }}
