--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    py{37,38,39,310}-django{22,32},
-    py{38,39,310}-django40,
+    py{38,39,310}-django{32,40,42},
     packaging,
 
 [testenv]
@@ -9,12 +8,12 @@ usedevelop = true
 deps =
     coverage
     djangorestframework
-    django22: Django~=2.2
     django32: Django~=3.2
-    django40: Django~=4.0
+    django41: Django~=4.1
+    django42: Django~=4.2
 commands =
-    py{37,38,39,310},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
-    py{37,38,39,310},pypy3: coverage report -m
+    py{38,39,310}: coverage run tests/manage.py test testsuite {posargs: -v 2}
+    py{38,39,310}: coverage report -m
 
 [testenv:packaging]
 usedevelop = false
