Add support for Django 4.2, 5.0 and Python 3.11, 3.12
Drop support for Django 2.2, 4.0 and Python 3.7

--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,40 @@
 [tox]
 envlist =
-    py{37,38,39,310}-django{22,32},
-    py{38,39,310}-django40,
-    packaging,
+    py{38,39,310,311,312,py3}-dj{32,42}
+    py{310,311,312,py3}-dj{50}
+    py312-packaging
+
+[gh-actions]
+python =
+       3.8: py38
+       3.9: py39
+       3.10: py310
+       3.11: py311
+       3.12: py312
+       pypy-3.10: pypy3
+
+[gh-actions:env]
+DJANGO =
+       3.2: dj32
+       4.2: dj42
+       5.0: dj50
+       main: djmain
+       packaging: packaging
 
 [testenv]
 usedevelop = true
 deps =
     coverage
     djangorestframework
-    django22: Django~=2.2
-    django32: Django~=3.2
-    django40: Django~=4.0
+    dj32: Django~=3.2.0
+    dj42: Django~=4.2.0
+    dj50: Django~=5.0.0
 commands =
-    py{37,38,39,310},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
-    py{37,38,39,310},pypy3: coverage report -m
+    py{38,39,310,311,312}: coverage run tests/manage.py test testsuite {posargs: -v 2}
+    py{38,39,310,311,312}: coverage report -m
+    pypy3: {envpython} tests/manage.py test testsuite {posargs: -v 2}
 
-[testenv:packaging]
+[testenv:py312-packaging]
 usedevelop = false
 deps =
     django
@@ -24,7 +42,7 @@ deps =
 commands =
     {envpython} tests/manage.py test testsuite {posargs: -v 2}
 
-[testenv:djangomain]
+[testenv:py312-djmain]
 deps =
     https://github.com/django/django/archive/main.tar.gz#egg=django
     djangorestframework
