--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,19 +28,22 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy-3.10"]
+        django-version: ["3.2", "4.2", "5.0"]
         experimental: [false]
-        toxenv: ["py"]
         include:
-          - python-version: "3.x"
-            toxenv: "packaging"
+          - python-version: "3.12"
+            django-version: "packaging"
             experimental: false
-          - python-version: "3.x"
-            toxenv: "djangomain"
+          - python-version: "3.12"
+            django-version: "main"
             experimental: true
-          - python-version: "pypy-3.9"
-            toxenv: "PyPy"
-            experimental: false
+        exclude:
+          # Unsupported Python versions for Django 5.0
+          - python-version: 3.8
+            django-version: 5.0
+          - python-version: 3.9
+            django-version: 5.0
 
     steps:
     - uses: actions/checkout@v3
@@ -52,24 +55,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install --upgrade coveralls tox tox-py tox-venv
+        python -m pip install --upgrade coveralls tox tox-py tox-venv tox-gh-actions
 
-    - name: Run tox targets for Python ${{ matrix.python-version }}
-      if: ${{ matrix.toxenv == 'py' }}
+    - name: Tox tests
+      run: tox -v
       continue-on-error: ${{ matrix.experimental }}
-      run: tox --py current
-
-    - name: Run '${{ matrix.toxenv }}' tox targets
-      if: ${{ matrix.toxenv != 'py' && matrix.toxenv != 'PyPy' }}
-      continue-on-error: ${{ matrix.experimental }}
-      run: tox -e ${{ matrix.toxenv }}
-
-    - name: Run tox targets for Python ${{ matrix.python-version }}
-      if: ${{ matrix.toxenv == 'PyPy' }}
-      continue-on-error: ${{ matrix.experimental }}
-      run: tox -e pypy3-django22,pypy3-django32
+      env:
+        DJANGO: ${{ matrix.django-version }}
 
     - name: Upload coverage data to coveralls.io
+      if: ${{ matrix.python-version != 'pypy-3.10' }}
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          COVERALLS_FLAG_NAME: run-${{ matrix.python-version }}
