Add support for Python 3.11 and 3.12

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 envlist =
     py{37,38,39,310}-django{22,32},
     py{38,39,310}-django40,
+    py{38,39,310,311}-django41,
+    py{38,39,310,311,312}-django42,
     packaging,
 
 [testenv]
@@ -12,9 +14,11 @@ deps =
     django22: Django~=2.2
     django32: Django~=3.2
     django40: Django~=4.0
+    django41: Django~=4.1
+    django42: Django~=4.2
 commands =
-    py{37,38,39,310},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
-    py{37,38,39,310},pypy3: coverage report -m
+    py{37,38,39,310,311,312},pypy3: coverage run tests/manage.py test testsuite {posargs: -v 2}
+    py{37,38,39,310,311,312},pypy3: coverage report -m
 
 [testenv:packaging]
 usedevelop = false
