--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,10 @@ repos:
     additional_dependencies:
     - flake8-bugbear
     - flake8-comprehensions
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: "v1.9.0"
+  hooks:
+  - id: mypy
 - repo: https://github.com/mgedmin/check-manifest
   rev: "0.49"
   hooks:
