Support for Django 5.1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy-3.10"]
-        django-version: ["3.2", "4.2", "5.0"]
+        django-version: ["3.2", "4.2", "5.0", "5.1"]
         experimental: [false]
         include:
           - python-version: "3.12"
@@ -44,6 +44,11 @@ jobs:
             django-version: 5.0
           - python-version: 3.9
             django-version: 5.0
+          # Unsupported Python versions for Django 5.1
+          - python-version: 3.8
+            django-version: 5.1
+          - python-version: 3.9
+            django-version: 5.1
 
     steps:
     - uses: actions/checkout@v3
