--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{38,39,310,311,312,py3}-dj{32,42}
-    py{310,311,312,py3}-dj{50}
+    py{310,311,312,py3}-dj{50,51}
     py312-packaging
 
 [gh-actions]
@@ -18,6 +18,7 @@ DJANGO =
        3.2: dj32
        4.2: dj42
        5.0: dj50
+       5.1: dj51
        main: djmain
        packaging: packaging
 
@@ -29,6 +30,7 @@ deps =
     dj32: Django~=3.2.0
     dj42: Django~=4.2.0
     dj50: Django~=5.0.0
+    dj51: Django~=5.1.0
 commands =
     py{38,39,310,311,312}: coverage run tests/manage.py test testsuite {posargs: -v 2}
     py{38,39,310,311,312}: coverage report -m
